# dicom-fuzzer

./: .coveragerc  .env.example  .env.production  .env.testing  .flake8  .gitignore  .pre-commit-config.yaml  ACTUAL_COVERAGE_REPORT.md  BACKLOG.md  CHANGELOG.md  CI_FIX_SUMMARY.md  CLEANUP_ANALYSIS.md  CONTRIBUTING.md  Dockerfile  FUZZING_GUIDE.md  LICENSE  MIGRATION.md  PROJECT_NOTES.md  PROJECT_PLAN.md  README.md  README_PHASE5_ADDITION.txt  README_phase5_insert.txt  SECURITY.md  STABILITY_IMPROVEMENTS.md  STRUCTURE.md  TESTING_SESSION_2025-01-20.md  TEST_FIX_AND_CI_STATUS.md  UPDATED_COVERAGE_REPORT_2025.md  __init__.py  backlog.md  benchmark_baseline.txt  codecov.yml  coverage_summary.md  demo_fuzzing.py  docker-compose.yml  main.py  mutation-results.txt  plan.md  pyproject.toml  requirements-dev.txt  (+2 more)
.claude/: CLAUDE.md
.github/: SESSION_2025-10-27.md  dependabot.yml
.github/workflows/: auto-merge.yml  auto-tag.yml  ci.yml  codeql.yml  continuous-fuzzing.yml  cve-notification.yml  dependabot-auto-merge.yml  dependency-review.yml  fuzz.yml  fuzzing.yml  mutation-testing.yml  performance.yml  pre-commit-autoupdate.yml  release.yml  sbom-scan.yml  scorecard.yml  security-advanced.yml  security.yml  stale.yml
campaigns/: real_world_campaign_plan.md
campaigns/campaign_001_initial/: CAMPAIGN_RESULTS.md
config/: .env.development  .pre-commit-config.yaml  README.txt  local_paths.example.py
configs/: local_paths.py
configs/targets/: dcmtk_dcmdump.json  orthanc_api.json
core/: __init__.py  config.py  corpus.py  corpus_manager.py  coverage_fuzzer.py  coverage_guided_fuzzer.py  coverage_guided_mutator.py  coverage_tracker.py  crash_deduplication.py  exceptions.py  fuzzing_session.py  generator.py  grammar_fuzzer.py  mutation_minimization.py  mutator.py  parser.py  reporter.py  statistics.py  target_runner.py  test_helper.py  types.py  validator.py
demo/: README.md  demo_simple.py  demo_workflow.py
dicom-seeds/: README.md
dicom-seeds/dx/: dx_352x370_14bit_evle.dcm
dicom_fuzzer/: __init__.py  __main__.py
dicom_fuzzer/_vendor/: __init__.py
dicom_fuzzer/adapters/: __init__.py  affinity.py  base.py
dicom_fuzzer/analytics/: campaign_analytics.py  visualization.py
dicom_fuzzer/attacks/: __init__.py
dicom_fuzzer/cli/: __init__.py  argument_parser.py  base.py  calibrate.py  campaign_runner.py  corpus.py  coverage_fuzz.py  create_html_report.py  cve_cli.py  dicomweb.py  fda_report.py  generate_report.py  gui_runner.py  llm.py  main.py  network_controller.py  persistent.py  realtime_monitor.py  samples.py  sbom_cmd.py  security_controller.py  state.py  stress.py  study.py  study_campaign.py  target_controller.py  tls.py
dicom_fuzzer/core/: __init__.py  atheris_integration.py  byte_mutator.py  config.py  config_validator.py  constants.py  corpus.py  corpus_distillation.py  corpus_manager.py  corpus_minimizer.py  coverage_correlation.py  coverage_fuzzer.py  coverage_guided_fuzzer.py  coverage_guided_mutator.py  coverage_instrumentation.py  coverage_tracker.py  coverage_types.py  crash_analyzer.py  crash_triage.py  (+66 more)
docs/: 3D_FUZZING_ROADMAP.md  ARCHITECTURE.md  CAMPAIGN_AUDIT_20260416.md  CLI_REFERENCE.md  COVERAGE.md  CRASH_INTELLIGENCE.md  CVE_AUDIT.md  CVE_REFERENCE.md  EXAMPLES.md  FUZZING_GUIDE.md  MUTATION_AUDIT.md  Makefile  PERFORMANCE.md  PERFORMANCE_3D.md  PROJECT_PLAN.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  REPORTING.md  ROADMAP_V1.7.0.md  SECURITY_PATTERNS.md  SESSION_NOTES_20251023.md  STABILITY.md  STRATEGY_AUDIT.md  STRUCTURE.md  TASK_BREAKDOWN.md  TESTING.md  TEST_COVERAGE.md  TROUBLESHOOTING.md  VIEWER_TESTING_3D.md  cii-best-practices-answers.md  requirements.txt
examples/: README.md  basic_fuzzing.py  coverage_fuzzing_example.py  coverage_guided_fuzzing_demo.py  demo_dictionary_fuzzing.py  demo_fuzzing.py  fda_compliance.py  fuzz_3d_series.py  fuzz_dicom_viewer.py  grammar_fuzzing_demo.py  optimized_3d_fuzzing_demo.py  security_testing.py  stability_features_demo.py
fuzzing_output/: coverage.json  fuzzing_report.json
logs/: security.json
mutation-report/: mutation-results.txt
oss-fuzz/: project.yaml
reports/: coverage_detailed.txt  performance_report_20251001_213559.html  quality_report.txt  test_results.txt
samples/: README.md
scripts/: analyze_crashes.py  benchmark_3d_fuzzing.py  benchmark_fuzzing.py  cleanup.bat  cleanup.sh  download_public_seeds.py  generate_3d_report.py  generate_simple_series.py  generate_test_series.py  import_seed_corpus.py  profile_hotspots.py  run_coverage.sh  setup_test_environment.sh  start_overnight_campaign.bat
strategies/: dictionary_fuzzer.py  header_fuzzer.py  metadata_fuzzer.py  pixel_fuzzer.py
tests/: conftest.py  test.py  test_atheris_integration.py  test_byte_mutator.py  test_campaign_analytics_comprehensive.py  test_cli_comprehensive.py  test_cli_integration.py  test_cli_main.py  test_cli_main_comprehensive.py  test_cli_main_coverage.py  test_comprehensive_e2e_workflows.py  test_config.py  test_config_comprehensive.py  test_config_validator_comprehensive.py  test_config_validator_comprehensive.py.disabled  test_config_validator_coverage.py  test_core_config.py  test_core_coverage_correlation.py  test_core_coverage_fuzzer.py  test_corpus.py  test_corpus_manager_comprehensive.py  test_corpus_manager_comprehensive.py.disabled  test_corpus_manager_coverage.py  test_corpus_manager_targeted.py  test_corpus_minimization_comprehensive.py  test_corpus_minimization_comprehensive.py.disabled  test_corpus_minimization_real.py  test_corpus_minimizer_extended.py  test_corpus_missing_lines.py  test_coverage_correlation.py  test_coverage_correlation_comprehensive.py  test_coverage_fuzz_cli.py  test_coverage_fuzzer.py  test_coverage_fuzzer_coverage.py  test_coverage_fuzzer_missing_lines.py  test_coverage_guided_fuzzer.py  test_coverage_guided_fuzzer_coverage.py  test_coverage_guided_mutator.py  test_coverage_instrumentation_additional.py  test_coverage_instrumentation_comprehensive.py  (+125 more)
tools/: coverage_fuzz.py  create_html_report.py  generate_report.py
utils/: config.py  helpers.py  logger.py
(+823 files in other folders)
