[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dicom-fuzzer"
version = "1.2.0"
authors = [
    {name = "David Dashti", email = "david@dashti.se"},
]
description = "A professional-grade DICOM fuzzing tool for healthcare security testing"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Software Development :: Testing",
]
keywords = [
    "dicom", "fuzzing", "healthcare", "security", "medical-imaging",
    "cybersecurity", "vulnerability-testing", "pacs"
]

dependencies = [
    "pydicom>=2.4.0",
    "pynetdicom>=2.0.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "structlog>=23.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "aiofiles>=23.0.0",
    "asyncio-mqtt>=0.11.0",
    "cryptography>=41.0.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    # Testing framework (state-of-the-art 2025)
    "pytest>=8.4.0",           # Latest pytest with improved diagnostics
    "pytest-cov>=4.1.0",       # Coverage reporting
    "pytest-asyncio>=0.21.0",  # Async test support
    "pytest-xdist>=3.8.0",     # Parallel test execution
    "pytest-timeout>=2.4.0",   # Test timeouts
    "pytest-benchmark>=5.0.0", # Performance regression testing
    "pytest-mock>=3.15.0",     # Better mocking utilities
    "pytest-snapshot>=0.9.0",  # Snapshot testing for outputs
    "pytest-randomly>=4.0.0",  # Random test order (finds hidden dependencies)
    "pytest-watch>=4.2.0",     # Auto-rerun tests on file changes
    "hypothesis>=6.82.0",      # Property-based testing
    # Note: mutmut excluded (Windows incompatible - requires Unix 'resource' module)
    # Code quality (modern tools)
    "ruff>=0.14.0",            # Fast linter/formatter (replaces black/flake8)
    "mypy>=1.13.0",            # Type checking with latest improvements
    "bandit>=1.7.5",           # Security vulnerability scanning
    "pre-commit>=3.3.0",       # Git hooks for quality gates
    "types-aiofiles>=23.0.0",  # Type stubs
]
docs = [
    "sphinx>=7.1.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
]
network = [
    "pynetdicom[apps]>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/Dashtid/DICOM-Fuzzer"
Documentation = "https://dicom-fuzzer.readthedocs.io/"
Repository = "https://github.com/Dashtid/DICOM-Fuzzer.git"
"Bug Tracker" = "https://github.com/Dashtid/DICOM-Fuzzer/issues"

[project.scripts]
dicom-fuzzer = "dicom_fuzzer.cli.main:main"

# Hatchling automatically discovers packages - no explicit configuration needed

# Ruff configuration (replaces black, isort, flake8, pylint)
[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = [".venv", "build", "dist", "artifacts", ".hypothesis"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function call in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B", "F841"]  # Allow assert statements and unused variables in tests

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "pydicom.*",
    "pynetdicom.*",
    "numpy.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    # Parallel execution with pytest-xdist (reduced to 4 workers for reliable coverage)
    "-n=4",
    "--dist=loadscope",
    # Coverage options
    "--cov=dicom_fuzzer",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    # Show test durations (slowest 10 tests)
    "--durations=10",
    # Timeout for individual tests (prevents hanging)
    "--timeout=30",
    # Current: 59% coverage (170% improvement from 22% baseline!)
    # Target: 80% coverage (industry standard - future improvement)
    # Progress: Multiple modules at 100%, property-based tests enabled, modern stack
    "--cov-fail-under=55",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (moderate speed)",
    "security: Security-focused tests",
    "performance: Performance tests",
    "slow: Tests that take a long time to run (>5s)",
    "network: Tests requiring network access",
    "asyncio: Asynchronous tests using asyncio",
]
# Timeout configuration
timeout = 30
timeout_method = "thread"

[tool.coverage.run]
source = ["dicom_fuzzer"]
data_file = "reports/coverage/.coverage"
parallel = true
concurrency = ["thread", "multiprocessing"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__main__.py",
    # Exclude only demo/example scripts not meant for production
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "reports/coverage/htmlcov"

[tool.coverage.xml]
output = "reports/coverage/coverage.xml"

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]  # Skip assert_used test
